--- a/Dream/package.json
+++ b/Dream/package.json
@@ -8,14 +8,7 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.51.0",
-    "react-native-swiper": "^1.5.4",
-    "react-navigation": "^1.0.0-beta.9",
-    "react-redux": "^5.0.4",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "blueimp-md5": "^2.7.0",
-    "axios": "^0.16.1"
+    "react-native": "0.51.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
